-- MySQL Script generated by MySQL Workbench
-- Tue Mar 11 17:49:24 2025
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema TABLAS
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema TABLAS
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `TABLAS` ;
USE `TABLAS` ;

-- -----------------------------------------------------
-- Table `TABLAS`.`GUARDERIAS`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `TABLAS`.`GUARDERIAS` (
  `ID` INT NOT NULL AUTO_INCREMENT,
  `Nombre` VARCHAR(45) NOT NULL,
  `Direccion` VARCHAR(45) NOT NULL,
  `Telefono` VARCHAR(20) NOT NULL,
  PRIMARY KEY (`ID`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `TABLAS`.`CUIDADOR`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `TABLAS`.`CUIDADOR` (
  `ID` INT NOT NULL AUTO_INCREMENT,
  `Nombre` VARCHAR(45) NOT NULL,
  `Telefono` VARCHAR(20) NOT NULL,
  `ID_GUARDERIA` INT NOT NULL,
  PRIMARY KEY (`ID`),
  INDEX `ID_idx` (`ID_GUARDERIA` ASC) VISIBLE,
  CONSTRAINT `ID`
    FOREIGN KEY (`ID_GUARDERIA`)
    REFERENCES `TABLAS`.`GUARDERIAS` (`ID`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `TABLAS`.`PERRO`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `TABLAS`.`PERRO` (
  `ID` INT NOT NULL AUTO_INCREMENT,
  `Nombre` VARCHAR(45) NOT NULL,
  `Raza` VARCHAR(45) NOT NULL,
  `Edad` INT NOT NULL,
  `Peso` DECIMAL(10,2) NOT NULL,
  `ID_GUARDERIA` INT NOT NULL,
  `ID_CUIDADOR` INT NOT NULL,
  PRIMARY KEY (`ID`),
  INDEX `ID_idx` (`ID_CUIDADOR` ASC) VISIBLE,
  INDEX `ID_idx1` (`ID_GUARDERIA` ASC) VISIBLE,
  CONSTRAINT `ID`
    FOREIGN KEY (`ID_CUIDADOR`)
    REFERENCES `TABLAS`.`CUIDADOR` (`ID`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `ID`
    FOREIGN KEY (`ID_GUARDERIA`)
    REFERENCES `TABLAS`.`GUARDERIAS` (`ID`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
